# abba_eval

./: .gitignore  LICENSE  README.md  modal-finetune.ipynb  pyproject.toml  requirements.txt
axolotl-configs/: demo_data.json  llama-3-8b-lora-modal.yml  llama3-8b-lora.yaml
data/: results.jsonl  results_annotated.jsonl
notebooks/: 01-generate-poems.ipynb  02-labeling.ipynb  03-figures.ipynb  04-poem-preference-labeling.ipynb  05-add-openpipe-ft-predictions.ipynb  06-check-auto-eval-alignment.ipynb
src/abba_eval/: pigeonxt.py  rhymer.py
src/gradio_app/: app.py
